--- a/src/index.html
+++ b/src/index.html
@@ -131,9 +131,7 @@
                 </li>
             </ul>
 
-            <ul class="product-list">
-
-    <li class="product-list__item">
+            <div class="product-list__item">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
@@ -142,7 +140,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item">
+</div><div class="product-list__item">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
@@ -151,7 +149,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item">
+</div><div class="product-list__item">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
@@ -160,7 +158,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item">
+</div><div class="product-list__item">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
@@ -169,7 +167,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item">
+</div><div class="product-list__item">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
@@ -178,7 +176,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item">
+</div><div class="product-list__item">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
@@ -187,7 +185,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item">
+</div><div class="product-list__item">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
@@ -196,7 +194,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item">
+</div><div class="product-list__item">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
@@ -205,7 +203,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item">
+</div><div class="product-list__item">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
@@ -214,7 +212,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item">
+</div><div class="product-list__item">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
@@ -223,9 +221,8 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li>
+</div>
 
-</ul>
 
             <button class="categories__more link link--underline" type="button">
                 Показати ще
@@ -285,7 +282,7 @@
                 <div class="swiper-slide restaurant-slider__item">
 
                         <li class="restaurant__item">
-                            <li class="@restClass">
+                            <div class="@restClass">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
             <img class="rest-card__img" src="./images/restaurant/resto_1@x1.webp" alt="@resttAlt" width="370"
@@ -301,8 +298,9 @@
             </button>
         </div>
     </article>
-</li>
+</div>
                         </li>
+                        
                 </div>
 
                 <div class="swiper-slide restaurant-slider__item">
@@ -430,7 +428,7 @@
                 <div class="swiper-wrapper review-slider__wrapper">
                     <div class="swiper-slide review-slider__item">
 
-                        <li class="review-card">
+                        <div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -449,7 +447,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -468,7 +466,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -487,7 +485,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -506,13 +504,13 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li>
+</div>
 
                     </div>
 
                     <div class="swiper-slide review-slider__item">
 
-                        <li class="review-card">
+                        <div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -531,7 +529,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -550,7 +548,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -569,7 +567,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -588,13 +586,13 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li>
+</div>
 
                     </div>
 
                     <div class="swiper-slide review-slider__item">
 
-                        <li class="review-card">
+                        <div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -613,7 +611,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -632,7 +630,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -651,7 +649,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -670,13 +668,13 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li>
+</div>
 
                     </div>
 
                     <div class="swiper-slide review-slider__item">
 
-                        <li class="review-card">
+                        <div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -695,7 +693,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -714,7 +712,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -733,7 +731,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li><li class="review-card">
+</div><div class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -752,7 +750,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</li>
+</div>
 
                     </div>
                 </div>
