--- a/src/module/restcard/_restcard.html
+++ b/src/module/restcard/_restcard.html
@@ -1,4 +1,4 @@
-<li class="@restClass">
+<div class="@restClass">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
             <img class="rest-card__img" src="./images/restaurant/resto_1@x1.webp" alt="@resttAlt" width="370"
@@ -14,4 +14,4 @@
             </button>
         </div>
     </article>
-</li>
+</div>
