--- a/src/index.html
+++ b/src/index.html
@@ -131,98 +131,101 @@
                 </li>
             </ul>
 
-            <div class="product-list__item">
-    <article class="product-card">
-        <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
-            <h3 class="link product-card__title">Чізбургер з листям салату</h3>
-            <span class="product-card__price">140 грн.</span>
-        </a>
-        <button class="btn product-card__btn" type="button">До кошика</button>
-    </article>
-</div><div class="product-list__item">
-    <article class="product-card">
-        <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
-            <h3 class="link product-card__title">Біфбургер</h3>
-            <span class="product-card__price">190 грн.</span>
-        </a>
-        <button class="btn product-card__btn" type="button">До кошика</button>
-    </article>
-</div><div class="product-list__item">
-    <article class="product-card">
-        <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
-            <h3 class="link product-card__title">Королівський чізбургер</h3>
-            <span class="product-card__price">260 грн.</span>
-        </a>
-        <button class="btn product-card__btn" type="button">До кошика</button>
-    </article>
-</div><div class="product-list__item">
-    <article class="product-card">
-        <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
-            <h3 class="link product-card__title">Чорний гамбургер</h3>
-            <span class="product-card__price">199 грн.</span>
-        </a>
-        <button class="btn product-card__btn" type="button">До кошика</button>
-    </article>
-</div><div class="product-list__item">
-    <article class="product-card">
-        <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
-            <h3 class="link product-card__title">Чікен бургер</h3>
-            <span class="product-card__price">180 грн.</span>
-        </a>
-        <button class="btn product-card__btn" type="button">До кошика</button>
-    </article>
-</div><div class="product-list__item">
-    <article class="product-card">
-        <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
-            <h3 class="link product-card__title">Чізбургер з листям салату</h3>
-            <span class="product-card__price">140 грн.</span>
-        </a>
-        <button class="btn product-card__btn" type="button">До кошика</button>
-    </article>
-</div><div class="product-list__item">
-    <article class="product-card">
-        <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
-            <h3 class="link product-card__title">Біфбургер</h3>
-            <span class="product-card__price">190 грн.</span>
-        </a>
-        <button class="btn product-card__btn" type="button">До кошика</button>
-    </article>
-</div><div class="product-list__item">
-    <article class="product-card">
-        <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
-            <h3 class="link product-card__title">Королівський чізбургер</h3>
-            <span class="product-card__price">260 грн.</span>
-        </a>
-        <button class="btn product-card__btn" type="button">До кошика</button>
-    </article>
-</div><div class="product-list__item">
-    <article class="product-card">
-        <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
-            <h3 class="link product-card__title">Чорний гамбургер</h3>
-            <span class="product-card__price">199 грн.</span>
-        </a>
-        <button class="btn product-card__btn" type="button">До кошика</button>
-    </article>
-</div><div class="product-list__item">
-    <article class="product-card">
-        <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
-            <h3 class="link product-card__title">Чікен бургер</h3>
-            <span class="product-card__price">180 грн.</span>
-        </a>
-        <button class="btn product-card__btn" type="button">До кошика</button>
-    </article>
-</div>
+            <ul class="product-list">
 
+    <li class="product-list__item">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <h3 class="link product-card__title">Чізбургер з листям салату</h3>
+            <span class="product-card__price">140 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="product-list__item">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <h3 class="link product-card__title">Біфбургер</h3>
+            <span class="product-card__price">190 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="product-list__item">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <h3 class="link product-card__title">Королівський чізбургер</h3>
+            <span class="product-card__price">260 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="product-list__item">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <h3 class="link product-card__title">Чорний гамбургер</h3>
+            <span class="product-card__price">199 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="product-list__item">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <h3 class="link product-card__title">Чікен бургер</h3>
+            <span class="product-card__price">180 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="product-list__item">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <h3 class="link product-card__title">Чізбургер з листям салату</h3>
+            <span class="product-card__price">140 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="product-list__item">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <h3 class="link product-card__title">Біфбургер</h3>
+            <span class="product-card__price">190 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="product-list__item">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <h3 class="link product-card__title">Королівський чізбургер</h3>
+            <span class="product-card__price">260 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="product-list__item">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <h3 class="link product-card__title">Чорний гамбургер</h3>
+            <span class="product-card__price">199 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="product-list__item">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <h3 class="link product-card__title">Чікен бургер</h3>
+            <span class="product-card__price">180 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li>
+
+</ul>
 
             <button class="categories__more link link--underline" type="button">
                 Показати ще
@@ -282,7 +285,7 @@
                 <div class="swiper-slide restaurant-slider__item">
 
                         <li class="restaurant__item">
-                            <div class="@restClass">
+                            <li class="@restClass">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
             <img class="rest-card__img" src="./images/restaurant/resto_1@x1.webp" alt="@resttAlt" width="370"
@@ -298,7 +301,7 @@
             </button>
         </div>
     </article>
-</div>
+</li>
                         </li>
                         
                 </div>
@@ -426,9 +429,10 @@
 
             <div class="swiper review-slider">
                 <div class="swiper-wrapper review-slider__wrapper">
-                    <div class="swiper-slide review-slider__item">
+                    <ul>
+                    <li class="swiper-slide review-slider__item">
 
-                        <div class="review-card">
+                        <li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -447,7 +451,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -466,7 +470,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -485,7 +489,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -504,13 +508,13 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div>
+</li>
 
-                    </div>
+                    </li>
 
-                    <div class="swiper-slide review-slider__item">
+                    <li class="swiper-slide review-slider__item">
 
-                        <div class="review-card">
+                        <li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -529,7 +533,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -548,7 +552,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -567,7 +571,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -586,13 +590,13 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div>
+</li>
 
-                    </div>
+                    </li>
 
-                    <div class="swiper-slide review-slider__item">
+                    <li class="swiper-slide review-slider__item">
 
-                        <div class="review-card">
+                        <li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -611,7 +615,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -630,7 +634,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -649,7 +653,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -668,13 +672,13 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div>
+</li>
 
-                    </div>
+                    </li>
 
-                    <div class="swiper-slide review-slider__item">
+                    <li class="swiper-slide review-slider__item">
 
-                        <div class="review-card">
+                        <li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -693,7 +697,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -712,7 +716,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -731,7 +735,7 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div><div class="review-card">
+</li><li class="review-card">
     <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
@@ -750,9 +754,10 @@
             Поціновувачка смачної їжі
         </span>
     </blockquote>
-</div>
+</li>
 
-                    </div>
+                    </li>
+                </ul>
                 </div>
 
                 <div class="review-slider__actions slider-actions">
