--- a/src/module/productlist/_productlist.html
+++ b/src/module/productlist/_productlist.html
@@ -1,1 +1,5 @@
-@loop('../productcard/_productCard.html', './productlist/_products.json')
+<ul class="product-list">
+
+    @loop('../productcard/_productCard.html', './productlist/_products.json')
+
+</ul>
