--- a/src/module/review/_review.html
+++ b/src/module/review/_review.html
@@ -8,29 +8,31 @@
 
             <div class="swiper review-slider">
                 <div class="swiper-wrapper review-slider__wrapper">
-                    <div class="swiper-slide review-slider__item">
+                    <ul>
+                    <li class="swiper-slide review-slider__item">
 
                         @loop('../reviewCard/_reviewCard.html', './review/_reviews.json')
 
-                    </div>
+                    </li>
 
-                    <div class="swiper-slide review-slider__item">
-
-                        @loop('../reviewCard/_reviewCard.html', './review/_reviews.json')
-
-                    </div>
-
-                    <div class="swiper-slide review-slider__item">
+                    <li class="swiper-slide review-slider__item">
 
                         @loop('../reviewCard/_reviewCard.html', './review/_reviews.json')
 
-                    </div>
+                    </li>
 
-                    <div class="swiper-slide review-slider__item">
+                    <li class="swiper-slide review-slider__item">
 
                         @loop('../reviewCard/_reviewCard.html', './review/_reviews.json')
 
-                    </div>
+                    </li>
+
+                    <li class="swiper-slide review-slider__item">
+
+                        @loop('../reviewCard/_reviewCard.html', './review/_reviews.json')
+
+                    </li>
+                </ul>
                 </div>
 
                 <div class="review-slider__actions slider-actions">
