--- a/src/module/head/_head.html
+++ b/src/module/head/_head.html
@@ -2,7 +2,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Food</title>
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="./images/icons/favicon.ico">
+
+    <link href="../../images/icons/favicon/favicon.ico" rel="icon" sizes="48x48" >
+    <link href="../../images/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
+    <link href="../../images/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon"/>
+    <link href="../../images/icons/favicon/site.webmanifest" rel="manifest"/>
+    <link href="../../images/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="./css/style.min.css" rel="stylesheet">
