--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Food</title>
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="./images/icons/favicon.ico">
+
+    <link href="../../images/icons/favicon/favicon.ico" rel="icon" sizes="48x48" >
+    <link href="../../images/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
+    <link href="../../images/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon"/>
+    <link href="../../images/icons/favicon/site.webmanifest" rel="manifest"/>
+    <link href="../../images/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="./css/style.min.css" rel="stylesheet">
@@ -430,6 +435,7 @@
             <div class="swiper review-slider">
                 <div class="swiper-wrapper review-slider__wrapper">
                     <ul>
+
                     <li class="swiper-slide review-slider__item">
 
                         <li class="review-card">
@@ -758,6 +764,7 @@
 
                     </li>
                 </ul>
+                
                 </div>
 
                 <div class="review-slider__actions slider-actions">
