--- a/src/module/restcard/_restcard.html
+++ b/src/module/restcard/_restcard.html
@@ -1,7 +1,7 @@
 <li class="@restClass">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="./images/restaurant/resto_1@x1.webp" alt="@resttAlt" width="370"
+            <img class="rest-card__img" src="@restImageUrl" alt="@resttAlt" width="370"
                 height="300">
         </a>
         <div class="rest-card__box">
