--- a/src/module/reviewCard/_reviewCard.html
+++ b/src/module/reviewCard/_reviewCard.html
@@ -1,4 +1,4 @@
-<li class="review-card">
+<li class="@reviewClass">
     <img class="review-card__img" src="@reviewImageUrl" alt="@productAlt"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
